--- a/style.css
+++ b/style.css
@@ -1,17 +1,17 @@
 h1 {
-    color: orange;
+    color: #ff8222;
     font-size: 30px;
     font-weight: bold;
 }
 
 p {
-    color: blue;
+    color: #1180FF ;
     font-size: 16px;
     font-weight: normal;
 }
 
 h2 {
-    color: green;
+    color: #5FFF43;
     font-size: 25px;
     font-weight: 600;
 }
